# tkinter-gui-library

./: README.md  pyproject.toml
poetry_dependency/: colors.py  gui.py
tkinter_gui_library/: colors.py  gui.py
