[project]
name = "tkinter_gui_library"
version = "0.1.0"
description = "A custom library using tkinter to construct basic GUIs"
authors = [
    {name = "averylhammond",email = "149446626+averylhammond@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
